--- a/index.html
+++ b/index.html
@@ -11,34 +11,69 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Bienvenido a mi página web</h1>
+    <header>
+        <!-- Menú fijo superior -->
+        <nav class="navbar">
+            <ul>
+                <li><a href="#sobre-mi">Sobre mí</a></li>
+                <li><a href="#educacion">Educación</a></li>
+                <li><a href="#experiencia">Experiencia</a></li>
+                <li><a href="#logros">Logros</a></li>
+                <li><a href="#top-peliculas">Top 10 Películas</a></li>
+            </ul>
+        </nav>
+        <div class="Sheryl">
+            <h1>Hola, soy <span>Sheryl</span></h1>
+            <p>Bienvenido a la página</p>
+        </div>
+    </header>
 
-        <h2>Sobre mí</h2>
-        <div class="biografia">
-            <p>Soy Sheryl una apasionada del desarrollo web con una dulce atracción por el diseño y la creación web. Me esfuerzo
-                constantemente por aprender y mejorar!</p>
+    <div class="container">
+
+        <div class="card" id="sobre-mi">
+            <h2>Sobre mí</h2>
+            <p>Soy Sheryl, una apasionada del desarrollo web con una dulce atracción por el diseño y la creación web. Me
+                esfuerzo constantemente por aprender y mejorar!</p>
         </div>
 
-        <h2>Educación</h2>
-        <div class="educacion">
+        <div class="card" id="educacion">
+            <h2>Educación</h2>
             <p>Actualmente, soy estudiante de Ingeniería de sistemas, con un enfoque en desarrollo de software y diseño
                 web.</p>
         </div>
 
-        <h2>Experiencia</h2>
-        <div class="experiencia">
+        <div class="card" id="experiencia">
+            <h2>Experiencia</h2>
             <p>Tengo experiencia en diseño de interfaces y he trabajado en varios proyectos independientes de desarrollo
                 web.</p>
         </div>
 
-        <h2>Logros</h2>
-        <div class="logros">
+        <div class="card" id="logros">
+            <h2>Logros</h2>
             <p>Mi meta es contribuir a proyectos innovadores que mejoren la vida de las personas a través de la
-                tecnología y tengan mejores oportunidades, accesibilidades a poder aprender sobre programación. </p>
+                tecnología y tengan mejores oportunidades, accesibilidades a poder aprender sobre programación.</p>
         </div>
 
+        <section class="card" id="top-peliculas">
+            <h2>Mi Top 10 pelis favoritas</h2>
+            <ol>
+                <li>Alien: Covenant</li>
+                <li>El Planeta de los Simios</li>
+                <li>Matrix</li>
+                <li>El rey Mono</li>
+                <li>Avatar</li>
+                <li>Terminator</li>
+                <li>Jurassic World</li>
+                <li>Star Wars: Episodio V - El Imperio Contraataca</li>
+                <li>Depredador</li>
+                <li>En el Corazón del Mar</li>
+            </ol>
+        </section>
+
     </div>
+
+
+
 </body>
 
 </html>
